# LSTM_Text_Generator

./: .gitignore  CMakeLists.txt  LearningDataOne.txt  LearningDataTwo.txt  Plain_Kate.txt  README.md  The_Body_Snatcher.txt  form.ui  lstmgeneratormainwindow.cpp  lstmgeneratormainwindow.h  lstmgeneratormainwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  test_text.txt
pageModels/: directorymodelview.cpp  directorymodelview.h  neuralnetworkmodelview.cpp  neuralnetworkmodelview.h  pagemodel.cpp  pagemodel.h  pagemodel.ui
pageSandbox/: newmodelgroupbox.cpp  newmodelgroupbox.h  newmodelgroupbox.ui  pagesandbox.cpp  pagesandbox.h  pagesandbox.ui
src/: CMakeLists.txt
src/activationfunctions/: CMakeLists.txt  activationfunctions.cpp  activationfunctions.h
src/autodifferentiation/: CMakeLists.txt  inum.h  numwithgradient.cpp  numwithgradient.h  simplenum.h
src/exception/: CMakeLists.txt  activationfunctionsexception.cpp  activationfunctionsexception.h  lossexception.cpp  lossexception.h  matrixexception.cpp  matrixexception.h  neuralnetworkexception.cpp  neuralnetworkexception.h  textembeddingexception.cpp  textembeddingexception.h  trainerexception.cpp  trainerexception.h
src/generatorwindow/: CMakeLists.txt  generatorwindow.cpp  generatorwindow.h
src/loss/: CMakeLists.txt  activationfunctions.cpp  activationfunctions.h  iloss.h  loss.h  lossactivationfunctions.cpp  lossactivationfunctions.h  softmaxcrossentropyloss.cpp  softmaxcrossentropyloss.h
src/lstm/: CMakeLists.txt  constants.h  num.h  numwithgradient.cpp  numwithgradient.h  simplenum.cpp  simplenum.h
src/maths/: CMakeLists.txt  constants.cpp  constants.h  matrix.cpp  matrix.h  matrix2d.cpp  matrix3d.cpp  matrix3d.h
src/matrix/: CMakeLists.txt  constants.h  imatrix.h  matrix.cpp  matrix.h  matrix2d.cpp  matrix2d.h  matrix3d.cpp  matrix3d.h  operations.h
src/modeltextgenerationwidget/: CMakeLists.txt  directorymodelview.cpp  directorymodelview.h  modeltextgenerationgroupbox.cpp  modeltextgenerationgroupbox.h  modeltextgenerationgroupbox.ui
src/modeltrainwidget/: CMakeLists.txt  aboutcurmodelstatedialog.cpp  aboutcurmodelstatedialog.h  aboutcurmodelstatedialog.ui  aboutoptimizerdialog.cpp  aboutoptimizerdialog.ui  abouttrainingdialog.h  abouttrainingdialog.ui  modeltraininggroupbox.h  modeltraininggroupbox.ui
src/neuralnetwork/: CMakeLists.txt  ineuralnetworklayer.h  ineuralnetworkmodel.h  ineuralnetworknode.h  lstmlayer.cpp  lstmlayer.h  lstmmodel.cpp  lstmmodel.h  lstmnode.cpp  lstmnode.h
src/neuralnetwork/autodifferentiation/: num.h  numwithgradient.cpp  numwithgradient.h  simplenum.cpp
src/newmodelwidget/: CMakeLists.txt  aboutlayersdialog.cpp  aboutlayersdialog.ui  aboutlearningdatadialog.cpp  aboutmodeldatadialog.h  newmodelgroupbox.cpp  newmodelgroupbox.ui
src/optimizer/: CMakeLists.txt  adagrad.cpp  adagrad.h  ioprimizer.h  ioptimizer.h  sgd.cpp  sgd.h
src/randommanaging/: CMakeLists.txt  distributor.cpp  distributor.h
src/textembedding/: CMakeLists.txt  charasvectorembedding.cpp  charasvectorembedding.h  itextembedding.h
src/textgeneration/: CMakeLists.txt  itextgeneration.h  itextgenerator.h  neuralnetworktextgenerator.cpp  neuralnetworktextgenerator.h
src/textgenerator/: CMakeLists.txt  neuralnetworktextgenerator.cpp
src/trainer/: CMakeLists.txt  consistenttrainer.cpp  consistenttrainer.h  itrainer.h
src/widgetpagesandbox/: CMakeLists.txt  aboutcurmodelstatedialog.ui  aboutlayersdialog.h  aboutlayersdialog.ui  aboutlearningdatadialog.cpp  aboutlearningdatadialog.h  aboutlearningdatadialog.ui  aboutmodeldatadialog.cpp  aboutmodeldatadialog.ui  aboutoptimizerdialog.h  aboutoptimizerdialog.ui  abouttrainingdialog.cpp  modeltraininggroupbox.cpp  modeltraininggroupbox.h  modeltraininggroupbox.ui  newmodelgroupbox.cpp  newmodelgroupbox.h  newmodelgroupbox.ui  pagesandbox.cpp  pagesandbox.h  pagesandbox.ui
test/: CMakeLists.txt  test.cpp
test_activationfunctions/: CMakeLists.txt  testactivationfunctions.cpp
test_autodifferentiation/: CMakeLists.txt  testautodiff.cpp
test_loss/: CMakeLists.txt  testloss.cpp
test_maths/: CMakeLists.txt  testmaths.cpp
test_matrix/: CMakeLists.txt  testmatrix.cpp
test_neuralnetwork/: CMakeLists.txt  testneuralnetwork.cpp
test_optimizer/: CMakeLists.txt  testoptimizer.cpp
test_textembedding/: CMakeLists.txt  testtextembedding.cpp
test_trainer/: CMakeLists.txt  testtrainer.cpp
