add_subdirectory(loss)
add_subdirectory(matrix)
add_subdirectory(exception)
add_subdirectory(optimizer)
add_subdirectory(neuralnetwork)
add_subdirectory(autodifferentiation)
add_subdirectory(activationfunctions)
add_subdirectory(trainer)
add_subdirectory(randommanaging)
add_subdirectory(textembedding)
add_subdirectory(textgeneration)
add_subdirectory(widgetpagesandbox)
